# jsonlogic_rs

./: Cargo.toml  README.md
src/: lib.rs
src/operators/: addition.rs  division.rs  double_negation.rs  ends_with.rs  geo_any_in.rs  geo_in.rs  greater_equal_than.rs  greater_than.rs  is_in.rs  less_equal_than.rs  less_than.rs  logic.rs  logic_geo.rs  missing_some.rs  mod.rs  modulo.rs  multiplication.rs  negation.rs  not_equal.rs  reduce.rs  regex_match.rs  starts_with.rs  strict_equality.rs  strict_not_equal.rs  subtraction.rs  touch.rs  ts_repeat.rs  variable.rs
tests/: array.rs  from_file.rs  null.rs  numeric.rs
tests/json/: onsign_extra.json  onsign_op.json  tests.json
