[package]
name = "jsonlogic"
version = "0.5.1"
authors = ["Marvin Davieds <marvin.davieds@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A JsonLogic implementation in Rust"
repository = "https://github.com/marvindv/jsonlogic_rs"
keywords = ["jsonlogic", "json", "logic", "rule"]
categories = ["parser-implementations", "encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
